--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,9 +1,10 @@
 .header__link {
   color: white;
   text-decoration: none;
+  padding-left: 18px;
 }
 
 .header__link:hover {
   transition: linear 0.3s;
-  opacity: 0.5;
+  opacity: 0.7;
 }
