--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -4,7 +4,7 @@
   font-style: normal;
   line-height: 20px;
   list-style-type: none;
-  font-weight: bold;
+  /* font-weight: bold; */
   color: #fff;
   margin: 24px auto 0 0;
   padding-left: 0;
