--- a/blocks/comments/__item/comments__item.css
+++ b/blocks/comments/__item/comments__item.css
@@ -35,12 +35,12 @@
 
 @media (max-width: 494px) {
   .comments__item:last-child {
-    margin: 0 0 19px 0;
+    margin: 0 0 -60px 0;
   }
 }
 
 @media (max-width: 374px) {
   .comments__item:last-child {
-    margin-bottom: 0;
+    margin-bottom: -10px;
   }
 }
