--- a/blocks/comments/__title/comments__title.css
+++ b/blocks/comments/__title/comments__title.css
@@ -1,6 +1,6 @@
 .comments__title {
   max-width: 800px;
-  min-height: 157px;
+  /* min-height: 157px; */
   margin: 0 auto 48px auto;
   font-style: normal;
   font-weight: 900;
@@ -12,7 +12,7 @@
 
 @media (max-width: 768px) {
   .comments__title {
-    min-height: auto;
+    /* min-height: auto; */
     max-width: 660px;
     font-size: 42px;
     line-height: 46px;
@@ -22,7 +22,6 @@
 
 @media (max-width: 449px) {
   .comments__title {
-    max-width: 660px;
     font-size: 32px;
     line-height: 35px;
     margin-bottom: 16px;
