--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -3,7 +3,7 @@
   font-size: 24px;
   line-height: 23.24px;
   padding-bottom: 4px;
-  padding-left: 18px;
+  /* padding-left: 18px; */
   display: flex;
   flex-wrap: wrap;
 }
