--- a/blocks/video/__item/_type/video__item_type_observatory.css
+++ b/blocks/video/__item/_type/video__item_type_observatory.css
@@ -1,21 +1,21 @@
-.video__item_observatory {
+.video__item_type_observatory {
   background-image: url(../../../../images/video/observatory.jpg);
 }
 
 @media (max-width: 1190px) {
-  .video__item_observatory {
+  .video__item_type_observatory {
     margin-right: 48px;
   }
 }
 
 @media (max-width: 930px) {
-  .video__item_observatory {
+  .video__item_type_observatory {
     margin-right: 24px;
   }
 }
 
 @media (max-width: 719px) {
-  .video__item_observatory {
+  .video__item_type_observatory {
     margin-right: 0;
     margin-left: 0;
   }
