--- a/blocks/video/__item/video__item.css
+++ b/blocks/video/__item/video__item.css
@@ -1,5 +1,5 @@
-@import url(../__item/_kamchatka/video__item_kamchatka.css);
-@import url(../__item/_observatory/video__item_observatory.css);
+@import url(./_type/video__item_type_kamchatka.css);
+@import url(./_type/video__item_type_observatory.css);
 
 .video__item {
   border-radius: 5px;
@@ -11,11 +11,12 @@
   justify-content: flex-end;
   min-width: 583px;
   min-height: 323px;
+  background-blend-mode: multiply;
 }
 
 .video__item:hover {
-  opacity: 0.6;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* opacity: 0.7; */
+  background-color: rgba(0, 0, 0, 0.8);
   transition: 0.3s;
 }
 .video__item:not(:hover) {
