--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -10,16 +10,20 @@
 }
 
 .cover__link:not(:hover) {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(42, 44, 47, 0.3);
   transition: 0.3s;
 }
 .cover__link:hover {
-  background-color: #2a2c2f;
+  background-color: rgba(42, 44, 47, 0.8);
   transition: 0.3s;
 }
-
+@media (max-width: 1024px) {
+  .cover__link {
+    background-position: center;
+  }
+}
 @media (max-width: 786px) {
   .cover__link {
-   padding-top: 0;
+    padding-top: 0;
   }
 }
