--- a/blocks/intro/__content-row/intro__content-row.css
+++ b/blocks/intro/__content-row/intro__content-row.css
@@ -5,7 +5,8 @@
   max-width: 683px;
   /* font-size: 14px; Так у меня в скачанном макете !!!*/
   font-size: 16px;
-  line-height: 24px;
+  /* line-height: 24px;  Так у меня в скачанном макете!!!*/
+  line-height: 26px;
   margin: 27px auto 0 0;
 }
 
@@ -13,7 +14,7 @@
   .intro__content-row {
     max-width: 343px;
     /* font-size: 16px; */
-    line-height: 27px;
+    /* line-height: 27px; */
     margin: 32px auto 0;
   }
 }
