--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,7 @@
   background-color: #2a2c2f;
   max-width: 100%;
   font-family: "Inter", sans-serif, Arial, Helvetica;
+  min-width: 320px;
 }
 
 /* Для обозначения границ */
